
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  February, 10 2017, 12:40
  deviceServiceVersion = 1013371
	
  [-] Fixed error logo printing
  [+] Added parameter FieldSeparator as field separator for parameters 
      ItemTableHeader and ItemRowFormat

********************************************************************************

  February, 8 2017, 11:35
  deviceServiceVersion = 1013368
	
  [-] Fixed error with receipt cut on unknown models - removed model.getCapCutter

********************************************************************************

  January, 28 2017, 14:00
  deviceServiceVersion = 1013357
	
  [+] Added parameter fsHeaderEnabled to enable printing of company address
      after receipt header. Default value is false (not printed).

  [+] Added parameter nonFiscalHeaderEnabled to enable or disable document header 
      in nonfiscal receipt

********************************************************************************

  January, 25 2017, 22:50
  deviceServiceVersion = 1013355
	
  [+] Added parameter capJrnPresent. Method getCpJrnPresent 
      returns capJrnPresent and mode.getCapJrnPresent
	  
  [-] Changed directIO command SMFPTR_DIO_READ_FS_PARAMS
	  
********************************************************************************

  January, 24 2017, 19:40
  deviceServiceVersion = 1013353
	
  [+] Added directIO(SMFPTR_DIO_READ_FS_PARAMS) to read fiscal storage params
      public static final int SMFPTR_DIO_READ_FS_PARAMS = 0x3E;
	  
  [-] Fixed error with command "Open receipt"
  
********************************************************************************

  January, 21 2017, 23:00
  deviceServiceVersion = 1013352
	
  [-] Fixed some errors
	  