@@ -50,7 +50,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.12.jar}:\
     ${file.reference.xerces.jar}:\
     ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.zxing-2.2.jar}
+    ${file.reference.zxing-2.2.jar}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -97,7 +98,8 @@ run.classpath=\
     ${file.reference.log4j-1.2.12.jar}:\
     ${file.reference.xerces.jar}:\
     ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.zxing-2.2.jar}
+    ${file.reference.zxing-2.2.jar}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
