@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "370-1-g36ebd1a";
+    public static final String VERSION = "371";
 }
